# file_test_rust

./: .gitignore  Cargo.toml  README.md
src/: main.rs
