[package]
name = "file_test_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["cargo", "derive"] }
itertools = "0.10.5"
rust_decimal = { version = "1.26.1", features = ["serde", "rand"] }
uuid = "1.2.2"
